--- a/templates/service.html
+++ b/templates/service.html
@@ -14,7 +14,7 @@
 
     
 
-<link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet" crossorigin="anonymous">
 
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
