--- a/templates/service.html
+++ b/templates/service.html
@@ -190,35 +190,35 @@
 
 
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('model_fig', path='/Accuracy.png') }}">
-                <img src= "{{ url_for('model_fig', path='/Accuracy.png') }}"  alt="Training Accuracy" width="600" height="400">
+              <a target="_blank" href="{{url_path_for_Accuracy}}">
+                <img src= "{{url_path_for_Accuracy}}"  alt="Training Accuracy" width="600" height="400">
               </a>
               <div class="desc">Training Accuracy</div>
             </div>
             
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('model_fig', path='/Loss.png') }}">
-                <img src= "{{ url_for('model_fig', path='/Loss.png') }}"  alt="Training Loss" width="600" height="400">
+              <a target="_blank" href="{{url_path_for_Loss}}">
+                <img src= "{{url_path_for_Loss}}"  alt="Training Loss" width="600" height="400">
               </a>
               <div class="desc">Training Loss</div>
             </div>
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('model_fig', path='/Nodes.png') }}">
-                <img src="{{ url_for('model_fig', path='/Nodes.png') }}"  alt="Model Nodes" width="600" height="400">
+              <a target="_blank" href="{{url_path_for_Nodes}}">
+                <img src="{{url_path_for_Nodes}}"  alt="Model Nodes" width="600" height="400">
               </a>
               <div class="desc">Model Nodes</div>
             </div>
             
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('model_fig', path='/Pruned_nodes.png') }}">
-                <img src="{{ url_for('model_fig', path='/Pruned_nodes.png') }}"  alt="Pruned Nodes" width="600" height="400">
+              <a target="_blank" href="{{url_path_for_Pruned_nodes}}">
+                <img src="{{url_path_for_Pruned_nodes}}"  alt="Pruned Nodes" width="600" height="400">
               </a>
               <div class="desc">Pruned Nodes</div>
             </div>
 
             <div class="gallery">
-              <a target="_blank" href="{{ url_for('model_fig', path='/Routes.png') }}">
-                <img src="{{ url_for('model_fig', path='/Routes.png') }}"  alt="Model Routes" width="600" height="400">
+              <a target="_blank" href="{{url_path_for_Routes}}">
+                <img src="{{url_path_for_Routes}}"  alt="Model Routes" width="600" height="400">
               </a>
               <div class="desc">Model Routes</div>
             </div>
