去除model pipeline的save btn

--- a/templates/model.html
+++ b/templates/model.html
@@ -231,13 +231,9 @@
             </div>
             
           </div>
-          
+        
           <br><br><br><br><br><br><br><br>
-          <label class="col-md-8 fs-4">Save configuration and Performace.</label>
-          <label for="save_configuration_performance" class="btn btn-primary btn-lg">Save</label>
-          <input type="submit" id="save_configuration_performance" class="btn btn-primary btn-lg" formaction="/save/model" hidden>
-          <br><br>
-          <text>After training completed, this save mechanism will execute automatically.<br>But user could manually execute it before training so that it can just store the configuration in Database.</text>
+          <text>After training completed, this save mechanism will execute automatically.</text>
         </form>
 
       </div>
