Tuning times設為model_params參數

--- a/templates/model.html
+++ b/templates/model.html
@@ -149,6 +149,8 @@
           <input type="text" id="Hyperparameters" name="learningRateLowerBound" >
           <label class="col-md-8 fs-5">Optimizer</label>
           <input type="text" id="Hyperparameters" name="optimizer"  value="Adam" disabled>
+          <label class="col-md-8 fs-5">Tuning times</label>
+          <input type="text" id="Hyperparameters" name="tuningTimes" >
           <label class="col-md-8 fs-5">Regularizing strength</label>
           <input type="text" id="Hyperparameters" name="regularizingStrength"  >
           <br><br>
@@ -174,6 +176,8 @@
           <text><b>Learning rate Lower bound : <font color="blue">{{learningRateLowerBound}}</font></b></text>
           <br>
           <text><b>Optimizer : <font color="blue">{{optimizer}}</font></b></text>
+          <br>
+          <text><b>Tuning times : <font color="blue">{{tuningTimes}}</font></b></text>
           <br>
           <text><b>Regularizing strength : <font color="blue">{{regularizingStrength}}</font></b></text>
           <br>
