--- a/templates/service.html
+++ b/templates/service.html
@@ -165,6 +165,8 @@
           <br>
           <text><b>Optimizer : <font color="blue">{{optimizer}}</font></b></text>
           <br>
+          <text><b>Tuning times : <font color="blue">{{tuningTimes}}</font></b></text>
+          <br>
           <text><b>Regularizing strength : <font color="blue">{{regularizingStrength}}</font></b></text>
           <!-- <br>
           <text><b>model_experiments_record : <font color="blue">{{model_experiments_record}}</font></b></text> -->
