寫好__is_lr_goal_big_enough()的type hint了，原理是偵測第一次訓練時，是否就已出現loss大於lr_goal的狀況，如此狀況

--- a/templates/model.html
+++ b/templates/model.html
@@ -159,6 +159,9 @@
           <label class="col-md-8 fs-5"></label>
           <label for="define_model" class="btn btn-primary btn-lg">Train</label>
           <input type="submit" id="define_model" class="btn btn-primary btn-lg" formaction="/pipeline/model" hidden>
+
+          <br><br>
+          <text><b>Type Hint : <font color="blue">{{typeHint}}</font></b></text>
           
           <br><br>
           <label class="col-md-8 fs-3">Training configuration</label>
