--- a/templates/service.html
+++ b/templates/service.html
@@ -155,6 +155,8 @@
           <br>
           <text><b>Model  : <font color="blue">{{modelFile}}</font></b></text>
           <br>
+          <text><b>Initializing number : <font color="blue">{{initializingNumber}}</font></b></text>
+          <br>
           <text><b>Loss Function : <font color="blue">{{lossFunction}}</font></b></text>
           <br>
           <text><b>Learning goal : <font color="blue">{{learningGoal}}</font></b></text>
