--- a/templates/model_scenario_2.html
+++ b/templates/model_scenario_2.html
@@ -125,7 +125,23 @@
             <option value= "{{dataDir}}" SELECTED>{{dataDir}}</option>"
             {% endfor %}
           </select>
-          
+          <br><br>
+          <label class="col-md-8 fs-5">Data descirbing</label>
+          <select name="dataDescribing" method="GET"  style="font-size:20px;" > 
+            <option value= "ri_sro" SELECTED>ri_sro</option>
+            <option value= "ri_mro" >ri_mro</option>
+            <option value= "bi_sro" >bi_sro</option>
+            <option value= "bi_mro" >bi_mro</option>
+            <option value= "ri_sbo" >ri_sbo</option>
+            <option value= "ri_mbo" >ri_mbo</option>
+            <option value= "bi_sbo" >bi_sbo</option>
+            <option value= "bi_mbo" >bi_mbo</option>
+          </select>
+
+
+          <br><br>
+          ----------------------------------------------------------------------------------------------------------------------------------------------------
+
           <br><br>
           <label class="col-md-8 fs-4">Two Layer Net.</label>
           <label class="col-md-8 fs-5">Neuro node</label>
@@ -135,57 +151,84 @@
           <label class="col-md-8 fs-5">Loss function</label>
           <select name="lossFunction" method="GET"  style="font-size:20px;" > 
             <option value= "RMSE" SELECTED>RMSE</option>
-            <option value= "MSE" SELECTED>MSE</option>
-            <option value= "CROSSENTROPYLOSS" SELECTED>CROSSENTROPYLOSS</option>
+            <option value= "MSE" >MSE</option>
+            <option value= "CROSSENTROPYLOSS" >CROSSENTROPYLOSS</option>
           </select>
           <br><br>
           <label class="col-md-8 fs-4">Back Propagation.</label>
           <label class="col-md-8 fs-5">Optimizer</label>
           <select name="optimizer" method="GET"  style="font-size:20px;" > 
             <option value= "Adam" SELECTED>Adam</option>
-            <option value= "Adadelta" SELECTED>Adadelta</option>
-            <option value= "Adagrad" SELECTED>Adagrad</option>
-            <option value= "AdamW" SELECTED>AdamW</option>
+            <option value= "Adadelta" >Adadelta</option>
+            <option value= "Adagrad" >Adagrad</option>
+            <option value= "AdamW" >AdamW</option>
             
           </select>
           <label class="col-md-8 fs-5">Learning rate</label>
           <input type="text" id="Hyperparameters" name="learningRate" >
           <br><br>
+          
+          ----------------------------------------------------------------------------------------------------------------------------------------------------
+          <br><br>
+          <label class="col-md-8 fs-4">Initializing.</label>
+          <label class="col-md-8 fs-5">Initializing number</label>
+          <input type="text" id="Hyperparameters" name="initializingNumber" >
+          <label class="col-md-8 fs-5">Initializing learning goal</label>
+          <input type="text" id="Hyperparameters" name="initializingLearningGoal"  >
+          <br><br>
           <label class="col-md-8 fs-4">Selecting.</label>
           <label class="col-md-8 fs-5">Rule</label>
-          <select name="matchingRule" method="GET"  style="font-size:20px;" > 
-            <option value= "POS" SELECTED>POS</option>
-            <option value= "LTS" SELECTED>LTS</option>
+          <select name="selectingRule" method="GET"  style="font-size:20px;" > 
+            <option value= "POS" >POS</option>
+            <option value= "LTS" >LTS</option>
+            <option value= "Disabled" SELECTED>Disabled</option>
           </select>
           <br><br>
           <label class="col-md-8 fs-4">Matching.</label>
           <label class="col-md-8 fs-5">Rule</label>
           <select name="matchingRule" method="GET"  style="font-size:20px;" > 
-            <option value= "EU" SELECTED>EU</option>
-            <option value= "EU, LG" SELECTED>EU, LG</option>
-            <option value= "EU, LG, UA" SELECTED>EU, LG, UA</option>
-            <option value= "LG, UA" SELECTED>LG, UA</option>
+            <option value= "EU" >EU</option>
+            <option value= "EU, LG" >EU, LG</option>
+            <option value= "EU, LG, UA" >EU, LG, UA</option>
+            <option value= "LG, UA" >LG, UA</option>
+            <option value= "Disabled" SELECTED>Disabled</option>
           </select>
+          <label class="col-md-8 fs-5">Matching times</label>
+          <input type="text" id="Hyperparameters" name="matchingTimes"  >
+          <label class="col-md-8 fs-5">Matching learning goal</label>
+          <input type="text" id="Hyperparameters" name="matchingLearningGoal"  >
+          <label class="col-md-8 fs-5">Matching learning rate lower bound</label>
+          <input type="text" id="Hyperparameters" name="matchingLearningRateLowerBound"  >
+
           <br><br>
-          <label class="col-md-8 fs-4">Reorganizing.</label>
-          <label class="col-md-8 fs-5">Rule</label>
-          <select name="reorganizingRule" method="GET"  style="font-size:20px;" > 
-            <option value= "Default" SELECTED>Default</option>
-            <option value= "PCA" SELECTED>PCA</option>
-            <option value= "None" SELECTED>None</option>
-          </select>
-          <br><br>
+
           <label class="col-md-8 fs-4">Cramming.</label>
           <label class="col-md-8 fs-5">Rule</label>
           <select name="crammingRule" method="GET"  style="font-size:20px;" > 
-            <option value= "ri_sro" SELECTED>ri_sro</option>
-            <option value= "None" SELECTED>None</option>
+            <option value= "Enabled" >Enabled</option>
+            <option value= "Disabled" SELECTED>Disabled</option>
           </select>
-
 
           <br><br>
 
-          <label class="col-md-8 fs-4">Select Hyperparameters.</label>
+          <label class="col-md-8 fs-4">Reorganizing.</label>
+          <label class="col-md-8 fs-5">Rule</label>
+          <select name="reorganizingRule" method="GET"  style="font-size:20px;" > 
+            <option value= "Enabled" >Enabled</option>
+            <option value= "PCA" >PCA</option>
+            <option value= "Disabled" SELECTED>Disabled</option>
+          </select>
+          <label class="col-md-8 fs-5">Regularizing times</label>
+          <input type="text" id="Hyperparameters" name="regularizingTimes"  >
+          <label class="col-md-8 fs-5">Regularizing strength</label>
+          <input type="text" id="Hyperparameters" name="regularizingStrength"  >
+          <label class="col-md-8 fs-5">Regularizing learning goal</label>
+          <input type="text" id="Hyperparameters" name="regularizingLearningGoal"  >
+          <label class="col-md-8 fs-5">Regularizing learning rate lower bound</label>
+          <input type="text" id="Hyperparameters" name="regularizingLearningRateLowerBound"  >
+          <br><br>
+
+          <!-- <label class="col-md-8 fs-4">Select Hyperparameters.</label>
           <br><br>
           <label class="col-md-8 fs-5">Initializing number</label>
           <input type="text" id="Hyperparameters" name="initializingNumber" >
@@ -204,7 +247,7 @@
           <label class="col-md-8 fs-5">Regularizing strength</label>
           <input type="text" id="Hyperparameters" name="regularizingStrength"  >
           <br><br>
-          
+           -->
 
           <label class="col-md-8 fs-5"></label>
           <label for="define_model" class="btn btn-primary btn-lg">Train</label>
@@ -216,29 +259,72 @@
           <br><br>
           <label class="col-md-8 fs-3">Training configuration</label>
           <br><br>
+
+          <label class="col-md-8 fs-5">Data.</label>
+          <br>
           <text><b>Data directory : <font color="blue">{{dataDirectory}}</font></b></text>
           <br>
-          <text><b>Model  : <font color="blue">{{modelFile}}</font></b></text>
+          <text><b>Data descirbing : <font color="blue">{{dataDescribing}}</font></b></text>
+          <br><br>
+
+          <label class="col-md-8 fs-5">Two Layer Net.</label>
           <br>
-          <text><b>Initializing number : <font color="blue">{{initializingNumber}}</font></b></text>
+          <text><b>Neuro node : <font color="blue">{{neuroNode}}</font></b></text>
           <br>
-          <text><b>Loss Function : <font color="blue">{{lossFunction}}</font></b></text>
+          <text><b>Output dimension : <font color="blue">{{outputDimension}}</font></b></text>
           <br>
-          <text><b>Learning goal : <font color="blue">{{learningGoal}}</font></b></text>
-          <br>
-          <text><b>Learning rate : <font color="blue">{{learningRate}}</font></b></text>
-          <br>
-          <text><b>Learning rate Lower bound : <font color="blue">{{learningRateLowerBound}}</font></b></text>
+          <text><b>Loss function : <font color="blue">{{lossFunction}}</font></b></text>
+
+          <br><br>
+          <label class="col-md-8 fs-5">Back Propagation.</label>
           <br>
           <text><b>Optimizer : <font color="blue">{{optimizer}}</font></b></text>
           <br>
-          <text><b>Tuning times : <font color="blue">{{tuningTimes}}</font></b></text>
+          <text><b>Learning rate : <font color="blue">{{learningRate}}</font></b></text>
+
+          <br><br>
+          <label class="col-md-8 fs-5">Initializing.</label>
+          <br>
+          <text><b>Initializing number : <font color="blue">{{initializingNumber}}</font></b></text>
+          <br>
+          <text><b>Initializing learning goal : <font color="blue">{{initializingLearningGoal}}</font></b></text>
+     
+          <br><br>
+          <label class="col-md-8 fs-5">Selecting.</label>
+          <br>
+          <text><b>Rule : <font color="blue">{{selectingRule}}</font></b></text>
+
+          <br><br>
+          <label class="col-md-8 fs-5">Matching.</label>
+          <br>
+          <text><b>Rule : <font color="blue">{{matchingRule}}</font></b></text>
+          <br>
+          <text><b>Matching times : <font color="blue">{{matchingTimes}}</font></b></text>
+          <br>
+          <text><b>Matching learning goal : <font color="blue">{{matchingLearningGoal}}</font></b></text>
+          <br>
+          <text><b>Matching learning rate lower bound : <font color="blue">{{matchingLearningRateLowerBound}}</font></b></text>
+
+          <br><br>
+          <label class="col-md-8 fs-5">Cramming.</label>
+          <br>
+          <text><b>Rule : <font color="blue">{{crammingRule}}</font></b></text>
+
+          <br><br>
+          <label class="col-md-8 fs-5">Reorganizing.</label>
+          <br>
+          <text><b>Rule : <font color="blue">{{reorganizingRule}}</font></b></text>
+          <br>
+          <text><b>Regularizing times : <font color="blue">{{regularizingTimes}}</font></b></text>
           <br>
           <text><b>Regularizing strength : <font color="blue">{{regularizingStrength}}</font></b></text>
           <br>
-          <text><b>model_experiments_record : <font color="blue">{{model_experiments_record}}</font></b></text>
+          <text><b>Matching learning goal : <font color="blue">{{regularizingLearningGoal}}</font></b></text>
+          <br>
+          <text><b>Matching learning rate lower bound : <font color="blue">{{regularizingLearningRateLowerBound}}</font></b></text>
+
           <br><br>
-          <label class="col-md-8 fs-3">Training progressbar</label>
+          <label class="col-md-8 fs-5">Model experiments record : <font color="blue">{{model_experiments_record}}</font></label>
           <br><br>
           <label class="col-md-8 fs-3">Model Performance</label>
           <br><br>
