嘗試 function-oriented & 規劃object-oriented

--- a/templates/model_scenario_1.html
+++ b/templates/model_scenario_1.html
@@ -144,8 +144,8 @@
           <label class="col-md-8 fs-5">Loss function</label> 
           <select name="lossFunction" method="GET"  style="font-size:20px;" > 
             <option value= "RMSE" SELECTED>RMSE</option>
-            <option value= "MSE" SELECTED>MSE</option>
-            <option value= "CROSSENTROPYLOSS" SELECTED>CROSSENTROPYLOSS</option>
+            <option value= "MSE" >MSE</option>
+            <option value= "CROSSENTROPYLOSS" >CROSSENTROPYLOSS</option>
           </select>
           <label class="col-md-8 fs-5">Learning goal</label>
           <input type="text" id="Hyperparameters" name="learningGoal"  >
@@ -156,9 +156,9 @@
           <label class="col-md-8 fs-5">Optimizer</label>
           <select name="optimizer" method="GET"  style="font-size:20px;" > 
             <option value= "Adam" SELECTED>Adam</option>
-            <option value= "Adadelta" SELECTED>Adadelta</option>
-            <option value= "Adagrad" SELECTED>Adagrad</option>
-            <option value= "AdamW" SELECTED>AdamW</option>
+            <option value= "Adadelta" >Adadelta</option>
+            <option value= "Adagrad" >Adagrad</option>
+            <option value= "AdamW" >AdamW</option>
           </select>
           <label class="col-md-8 fs-5">Tuning times</label>
           <input type="text" id="Hyperparameters" name="tuningTimes" >
