--- a/templates/model_scenario_2.html
+++ b/templates/model_scenario_2.html
@@ -112,13 +112,15 @@
       </a>
     </header>
 
-    <div class="p-5 mb-1 bg-light rounded-3">
+    <div class="p-5 mb-1 bg-light rounded-5">
       <div class="container-fluid py-0">
         <h1 class="display-6 fw-bold">Model Pipeline</h1>
         <p class="col-md-8 fs-5">Define your own Model and train.</p> 
         <br><br>
         
-        <form  method="post" enctype="multipart/form-data"> <!-- action="/pipeline/model"/ -->
+        <form  method="post" enctype="multipart/form-data">
+          ----------------------------------------------------------------------------------------------------------------------------------------------------
+          <br><br>
           <label class="col-md-8 fs-4">Select Data directory from Server.</label>
           <select name="dataDirectory" method="GET"  style="font-size:20px;" >  <!-- select 也可以配 action -->
             {% for dataDir in upload_data %}
@@ -143,6 +145,7 @@
           ----------------------------------------------------------------------------------------------------------------------------------------------------
 
           <br><br>
+          <div id = "module_2LayerNet">
           <label class="col-md-8 fs-4">Two Layer Net.</label>
           <label class="col-md-8 fs-5">Neuro node</label>
           <input type="text" id="Hyperparameters" name="neuroNode" >
@@ -166,23 +169,31 @@
           </select>
           <label class="col-md-8 fs-5">Learning rate</label>
           <input type="text" id="Hyperparameters" name="learningRate" >
-          <br><br>
+          </div>
           
+          <br><br>
+        
           ----------------------------------------------------------------------------------------------------------------------------------------------------
           <br><br>
-          <label class="col-md-8 fs-4">Initializing.</label>
-          <label class="col-md-8 fs-5">Initializing number</label>
-          <input type="text" id="Hyperparameters" name="initializingNumber" >
-          <label class="col-md-8 fs-5">Initializing learning goal</label>
-          <input type="text" id="Hyperparameters" name="initializingLearningGoal"  >
+
+          <div id = "module_initializing">
+            <label class="col-md-8 fs-4">Initializing.</label>
+            <label class="col-md-8 fs-5">Initializing number</label>
+            <input type="text" id="Hyperparameters" name="initializingNumber" >
+            <label class="col-md-8 fs-5">Initializing learning goal</label>
+            <input type="text" id="Hyperparameters" name="initializingLearningGoal"  >
+            <br><br>
+            <label class="col-md-8 fs-4">Selecting.</label>
+            <label class="col-md-8 fs-5">Rule</label>
+            <select name="selectingRule" method="GET"  style="font-size:20px;" > 
+              <option value= "POS" >POS</option>
+              <option value= "LTS" >LTS</option>
+              <option value= "Disabled" SELECTED>Disabled</option>
+            </select>
+          </div>
+
           <br><br>
-          <label class="col-md-8 fs-4">Selecting.</label>
-          <label class="col-md-8 fs-5">Rule</label>
-          <select name="selectingRule" method="GET"  style="font-size:20px;" > 
-            <option value= "POS" >POS</option>
-            <option value= "LTS" >LTS</option>
-            <option value= "Disabled" SELECTED>Disabled</option>
-          </select>
+          ----------------------------------------------------------------------------------------------------------------------------------------------------
           <br><br>
           <label class="col-md-8 fs-4">Matching.</label>
           <label class="col-md-8 fs-5">Rule</label>
@@ -201,21 +212,38 @@
           <input type="text" id="Hyperparameters" name="matchingLearningRateLowerBound"  >
 
           <br><br>
+          ----------------------------------------------------------------------------------------------------------------------------------------------------
+          <br><br>
 
           <label class="col-md-8 fs-4">Cramming.</label>
           <label class="col-md-8 fs-5">Rule</label>
           <select name="crammingRule" method="GET"  style="font-size:20px;" > 
-            <option value= "Enabled" >Enabled</option>
+            <option value= "ri_sro" SELECTED>ri_sro</option>
+            <option value= "ri_mro" >ri_mro</option>
+            <option value= "bi_sro" >bi_sro</option>
+            <option value= "bi_mro" >bi_mro</option>
+            <option value= "ri_sbo" >ri_sbo</option>
+            <option value= "ri_mbo" >ri_mbo</option>
+            <option value= "bi_sbo" >bi_sbo</option>
+            <option value= "bi_mbo" >bi_mbo</option>
             <option value= "Disabled" SELECTED>Disabled</option>
           </select>
 
+          <br><br>
+          ----------------------------------------------------------------------------------------------------------------------------------------------------
           <br><br>
 
           <label class="col-md-8 fs-4">Reorganizing.</label>
           <label class="col-md-8 fs-5">Rule</label>
           <select name="reorganizingRule" method="GET"  style="font-size:20px;" > 
-            <option value= "Enabled" >Enabled</option>
-            <option value= "PCA" >PCA</option>
+            <option value= "ri_sro" SELECTED>ri_sro</option>
+            <option value= "ri_mro" >ri_mro</option>
+            <option value= "bi_sro" >bi_sro</option>
+            <option value= "bi_mro" >bi_mro</option>
+            <option value= "ri_sbo" >ri_sbo</option>
+            <option value= "ri_mbo" >ri_mbo</option>
+            <option value= "bi_sbo" >bi_sbo</option>
+            <option value= "bi_mbo" >bi_mbo</option>
             <option value= "Disabled" SELECTED>Disabled</option>
           </select>
           <label class="col-md-8 fs-5">Regularizing times</label>
@@ -227,32 +255,15 @@
           <label class="col-md-8 fs-5">Regularizing learning rate lower bound</label>
           <input type="text" id="Hyperparameters" name="regularizingLearningRateLowerBound"  >
           <br><br>
-
-          <!-- <label class="col-md-8 fs-4">Select Hyperparameters.</label>
+          ----------------------------------------------------------------------------------------------------------------------------------------------------
           <br><br>
-          <label class="col-md-8 fs-5">Initializing number</label>
-          <input type="text" id="Hyperparameters" name="initializingNumber" >
-          <label class="col-md-8 fs-5">Loss function</label> 
-          <input type="text" id="Hyperparameters" name="lossFunction" value="RMSE" disabled>
-          <label class="col-md-8 fs-5">Learning goal</label>
-          <input type="text" id="Hyperparameters" name="learningGoal"  >
-          <label class="col-md-8 fs-5">Learning rate</label>
-          <input type="text" id="Hyperparameters" name="learningRate"  >
-          <label class="col-md-8 fs-5">Learning rate Lower bound</label>
-          <input type="text" id="Hyperparameters" name="learningRateLowerBound" >
-          <label class="col-md-8 fs-5">Optimizer</label>
-          <input type="text" id="Hyperparameters" name="optimizer"  value="Adam" disabled>
-          <label class="col-md-8 fs-5">Tuning times</label>
-          <input type="text" id="Hyperparameters" name="tuningTimes" >
-          <label class="col-md-8 fs-5">Regularizing strength</label>
-          <input type="text" id="Hyperparameters" name="regularizingStrength"  >
-          <br><br>
-           -->
 
           <label class="col-md-8 fs-5"></label>
           <label for="define_model" class="btn btn-primary btn-lg">Train</label>
           <input type="submit" id="define_model" class="btn btn-primary btn-lg" formaction="/pipeline/model/scenario/2" hidden>
-
+          <br><br>
+          <text><b>Hint message : <font color="blue">若要啟用 Cramming 或 Reorganizing，請確保 Rule 與 Data Sescribing 設置相同</font></b></text> 
+          <!-- 上面這行可以寫個後端判斷，是否達成條件，未達成則顯示上述訊息 -->
           <br><br>
           <text><b>Interrupted message : <font color="blue">{{interrupted_message}}</font></b></text>
           
