1. 確認可以在 building_Net() 內建立並覆寫 class 2. 新增 dataShape, inputDimension, neuroNode, outputDimension 等ModelParameter 屬性 3. 把 net 的輸入參數全都當作 kwargs 傳入

--- a/templates/model_scenario_1.html
+++ b/templates/model_scenario_1.html
@@ -179,6 +179,8 @@
           <br><br>
           <text><b>Data directory : <font color="blue">{{dataDirectory}}</font></b></text>
           <br>
+          <text><b>Data Shape : <font color="blue">{{dataShape}}</font></b></text>
+          <br>
           <text><b>Model  : <font color="blue">{{modelFile}}</font></b></text>
           <br>
           <text><b>Initializing number : <font color="blue">{{initializingNumber}}</font></b></text>
