--- a/templates/model_scenario_2.html
+++ b/templates/model_scenario_2.html
@@ -199,9 +199,9 @@
           <label class="col-md-8 fs-5">Rule</label>
           <select name="matchingRule" method="GET"  style="font-size:20px;" > 
             <option value= "EU" >EU</option>
-            <option value= "EU, LG" >EU, LG</option>
-            <option value= "EU, LG, UA" >EU, LG, UA</option>
-            <option value= "LG, UA" >LG, UA</option>
+            <option value= "EU, LG" >EU_LG</option>
+            <option value= "EU, LG, UA" >EU_LG_UA</option>
+            <option value= "LG, UA" >LG_UA</option>
             <option value= "Disabled" SELECTED>Disabled</option>
           </select>
           <label class="col-md-8 fs-5">Matching times</label>
