與老師討論過後，一些名詞修正

--- a/templates/model_scenario_1.html
+++ b/templates/model_scenario_1.html
@@ -115,7 +115,7 @@
     <div class="p-5 mb-1 bg-light rounded-3">
       <div class="container-fluid py-0">
         <h1 class="display-6 fw-bold">Model Pipeline</h1>
-        <p class="col-md-8 fs-5">Define your own Model and train.</p> 
+        <p class="col-md-8 fs-5">Define your own SLFN and train.</p> 
         <br><br>
         
         <form  method="post" enctype="multipart/form-data"> <!-- action="/pipeline/model"/ -->
